Fix for ignite on java 17