@@ -28,7 +28,9 @@
 
     <elasticsearch.version>7.17.8</elasticsearch.version>
 
-    <ignite.version>2.7.6</ignite.version>
+    <ignite.version>2.14.0</ignite.version>
+    <ignite-cloud.version>2.13.0</ignite-cloud.version>
+    <ignite-aws.version>2.11.1</ignite-aws.version>
 
     <lucene.version>8.11.1</lucene.version>
 
@@ -385,6 +387,30 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>${maven-surefire-plugin.version}</version>
         <configuration>
+          <!--
+            Fix for Ignite problem:
+            "Ignite uses proprietary SDK APIs that are not available by default. You need to pass specific flags to JVM to make these APIs available." [1]
+            [1]:https://ignite.apache.org/docs/2.14.0/quick-start/java#running-ignite-with-java-11-or-later
+           -->
+          <argLine>
+            --add-opens=java.base/jdk.internal.misc=ALL-UNNAMED
+            --add-opens=java.base/sun.nio.ch=ALL-UNNAMED
+            --add-opens=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED
+            --add-opens=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED
+            --add-opens=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED
+            --add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED
+            --add-opens=java.base/java.io=ALL-UNNAMED
+            --add-opens=java.base/java.nio=ALL-UNNAMED
+            --add-opens=java.base/java.util=ALL-UNNAMED
+            --add-opens=java.base/java.util.concurrent=ALL-UNNAMED
+            --add-opens=java.base/java.util.concurrent.locks=ALL-UNNAMED
+            --add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED
+            --add-opens=java.base/java.lang=ALL-UNNAMED
+            --add-opens=java.base/java.lang.invoke=ALL-UNNAMED
+            --add-opens=java.base/java.math=ALL-UNNAMED
+            --add-opens=java.base/java.time=ALL-UNNAMED
+            --add-opens=java.sql/java.sql=ALL-UNNAMED
+          </argLine>
           <excludes>
             <exclude>**/*IT.java</exclude>
           </excludes>
